[package]
name = "repos-ui"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
log = "0.4"
simplelog = "0.10.0"

[dependencies.repos]
path = "../repos"

[dependencies.crossterm]
version = "^0.19.0"

[dependencies.tui]
version = "^0.15.0"
features = ["crossterm"]
default-features = false